# FACT

./: .gitignore  README.md  environment.yaml  eval_original_model.py  evaluate_og_model.py  get_saliency_maps.py  learn_concepts_dataset.py  learn_concepts_multimodal.py  plot_book.ipynb  pyproject.toml  requirements.txt  test_cav_activation.py  test_different_projections.py  test_sparsity_vs_accuracy.py  testnotebook.ipynb  train_pcbm.py  train_pcbm_h.py  train_pcbm_h_userstudy.py  train_pcbm_userstudy.py  verify_clip_pcbm_h.py  verify_dataset_pcbm.py  verify_dataset_pcbm_h.py  verify_pcbm_h.py  verify_results_clip_concepts_pcbm.py
concepts/: concept_utils.py  ontology.json
data/: audioset.py  coco_stuff.py  coco_target_indexes.txt  concept_loaders.py  constants.py  cub.py  data_zoo.py  derma_data.py  esc_50.py  metashift.py  metashift_sk.py  siim_isic.py  us8k.py
extension_scripts/: test_sparsity_vs_accuracy.py
extention_scripts/: test_sparsity_vs_accuracy.py
models/: __init__.py  clip_encoder.py  clip_pl.py  derma_models.py  model_zoo.py  pcbm_pl.py  pcbm_sk.py  pcbm_utils.py  pcbm_utils_prune.py  pcbmh_pl.py  resnet.py  saliency_model.py
notebook/: train_models.ipynb
notebooks/: example.ipynb  main.ipynb  playground_diego.ipynb  playground_metashift.ipynb  plot_book.ipynb  preprocessing-guide.ipynb  preprocessing_guide.ipynb  setup.ipynb  train_pcbm.ipynb  user_study.ipynb  user_study_pcbm.ipynb
scripts/: download_audioclip  download_audioset  download_broden  download_cocostuff  download_cub  download_derm7pt  download_esc  download_ham  download_ham10k  (+5 more)
(+63 files in other folders)
