[tool.poetry]
name = "fact"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
torch = "^2.1.2"
numpy = "^1.26.3"
torchvision = "^0.16.2"
scikit-learn = "^1.3.2"
tqdm = "^4.66.1"
pandas = "^2.1.4"
pytorchcv = "^0.0.67"
clip = {git = "https://github.com/openai/CLIP.git"}


[tool.poetry.group.dev.dependencies]
gdown = "^4.7.1"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
