[tool.poetry]
name = "fact"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
packages = [{ include = "models" }, { include = "data" }, { include = "concepts" }, { include = "training_tools" }]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
torch = "^2.1.2"
torchvision = "^0.16.2"
scikit-learn = "^1.3.2"
tqdm = "^4.66.1"
pandas = "^2.1.4"
pytorchcv = "^0.0.67"
clip = {git = "https://github.com/openai/CLIP.git"}
ftfy = "^6.1.3"
regex = "^2023.12.25"
wandb = "^0.16.2"
datasets = "^2.16.1"
lightning = {extras = ["pytorch-extra"], version = "^2.1.3"}
tensorboardx = "^2.6.2.2"
torch-tb-profiler = "^0.4.3"
numpy = ">=1.21,<1.25"
pytorch-ignite = "^0.4.13"
visdom = "^0.2.4"


[tool.poetry.group.dev.dependencies]
gdown = "^4.7.1"
jupyter = "^1.0.0"
renumics-spotlight = "^1.6.0"
nbdime = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
